Added 'Clear Rolls' button, and added space between roll buttons and output

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	</p>
 
 	<div id="dice_rollers"></div>
-
-	<div style="border: solid black 1px">
+	<br>
+	<div style="border: solid black 1px; width: 25%">
 		<p style="display: inline-block">Roll Name: </p>
 		<input type="text" id="input_name" placeholder="Add a name (optional)">
 		<br>
