Added panic roll for Alien dice roller

--- a/alien_dice_roller.html
+++ b/alien_dice_roller.html
@@ -15,8 +15,12 @@
 		<p id="p1" style="display: inline"></p>
 		<br>
 		<input type="number" id="d2" style="width: 50px" value=1>
-		<input type="button" id="b2" value="Panic Dice" onclick="roll2()">
+		<input type="button" id="b2" value="Stress Dice" onclick="roll2()">
 		<p id="p2" style="display: inline; color: red"></p>
+		<br>
+		<input type="number" id="d3" style="width: 50px" value=1>
+		<input type="button" id="b3" value="PANIC ROLL" onclick="roll3()">
+		<p id="p3" style="display: inline; color: red"></p>
 	</div>
 
 </body>
